k8s/app/k8s/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: demo
  name: blue
spec:
  selector:
    matchLabels:
      app: blue
  replicas: 2
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - image: 790359191027.dkr.ecr.ap-southeast-2.amazonaws.com/demo:blue
        imagePullPolicy: Always
        name: blue
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: demo
  name: blue
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: blue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: demo
  name: green
spec:
  selector:
    matchLabels:
      app: green
  replicas: 0
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - image: 790359191027.dkr.ecr.ap-southeast-2.amazonaws.com/demo:green
        imagePullPolicy: Always
        name: green
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: demo
  name: green
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: green
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: demo
  name: blue-green
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: eks-pub-1, eks-pub-2
    alb.ingress.kubernetes.io/security-groups: sg-0dd54298e71f28f11
    alb.ingress.kubernetes.io/actions.forward-multiple-tg: '{"Type":"forward","ForwardConfig":{"TargetGroups":[{"ServiceName":"blue","ServicePort":"80","Weight":100},{"ServiceName":"green","ServicePort":"80","Weight":0}]}}'
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: forward-multiple-tg
              servicePort: use-annotation
          - path: /blue
            backend:
              serviceName: blue
              servicePort: 80
          - path: /green
            backend:
              serviceName: green
              servicePort: 80
